--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,18 @@ fax: 020-81951225
 
 email: admin@gzfenlin.com.cn
 
+facebook: https://www.facebook.com/
+
+twitter: https://twitter.com/
+
+youtube: https://www.youtube.com/
+
+linkedin: https://www.linkedin.com/
+
+googleplus: 
+
+pinterest: 
+
 exclude:
   - README.md
 
