--- a/_config.yml
+++ b/_config.yml
@@ -14,17 +14,17 @@ fax: 020-81951225
 
 email: admin@gzfenlin.com.cn
 
-facebook: https://www.facebook.com/
+facebook: https://www.facebook.com/watermusicfountain
 
-twitter: https://twitter.com/
+twitter: https://twitter.com/Fenlinfountain
 
-youtube: https://www.youtube.com/
+youtube: https://www.youtube.com/channel/UCKxoOF35rAf4oaLihh9jmUQ
 
-linkedin: https://www.linkedin.com/
+linkedin: https://www.linkedin.com/company/guangzhou-fenlin-swimming-pool-sauna-equipments-co-ltd/
 
-googleplus: 
+googleplus: https://plus.google.com/u/0/110666410748896846953
 
-pinterest: 
+pinterest: https://www.pinterest.com/watershowfountain/
 
 exclude:
   - README.md
