--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ tel: 020-36528565
 
 fax: 020-81951225
 
-email: admin@gzfenlin.com.cn
+email: admin@fenlinmusicfountain.com
 
 facebook: https://www.facebook.com/watermusicfountain
 
