--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,11 @@ description: WATER SHOW
 
 address: No.1 Shuanggang Village, Jianggao town, Baiyun district, Guangzhou City, Guangdong Province, China.
 
-tel: 020-36528565
+tel1: 020-36528565
+
+tel2: +86-15820220501
+
+tel3: +86-13922474350
 
 fax: 020-81951225
 
