--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: WATER SHOW
 
 address: No.1 Shuanggang Village, Jianggao town, Baiyun district, Guangzhou City, Guangdong Province, China.
 
-tel1: 020-36528565
+tel1: +86-020-36528565
 
 tel2: +86-15820220501
 
