--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ url: https://www.fenlinmusicfountain.com
 
 title: WATER SHOW
 
-keywords: WATER SHOW
+keywords: musical fountain
 
 description: WATER SHOW
 
