--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ keywords: musical fountain
 
 description: WATER SHOW
 
+oswweb-mail-url: https://zackwo.com
+
 address: No.1 Shuanggang Village, Jianggao town, Baiyun district, Guangzhou City, Guangdong Province, China.
 
 tel1: +86-020-36528565
