--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ keywords: musical fountain
 
 description: WATER SHOW
 
-oswweb-mail-url: https://gdky.net
+oswweb-mail-url: https://zackwo.com
 
 address: No.1 Shuanggang Village, Jianggao town, Baiyun district, Guangzhou City, Guangdong Province, China.
 
